--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "ti4.app",
   "version": "0.2.0",
   "private": true,
+  "homepage": "http://jaredsmith07.github.io/ti4.app",
   "dependencies": {
     "node-sass": "^4.11.0",
     "react": "^16.7.0",
@@ -13,7 +14,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -23,5 +26,8 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "devDependencies": {
+    "gh-pages": "^2.0.1"
+  }
 }
