--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "react": "^16.7.0",
     "react-dnd": "^7.4.5",
     "react-dnd-html5-backend": "^7.4.4",
+    "react-dnd-touch-backend": "^0.8.3",
     "react-dom": "^16.7.0",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.2",
